--- a/vcweb/sanitation/templates/sanitation/includes/payoff-table.html
+++ b/vcweb/sanitation/templates/sanitation/includes/payoff-table.html
@@ -1,3 +1,4 @@
+{% if treatment == "In-group" %}
 <div class='payoff-absolute'>
 <h3>Payoff table</h3>
 <table>
@@ -14,7 +15,9 @@
 	</tbody>
 </table>
 </div>
+{% endif %}
 
+{% if treatment == "Out-group" %}
 <div class='payoff-ranking'>
 <h3>Payoff table</h3>
 <table>
@@ -31,3 +34,6 @@
 	</tbody>
 </table>
 </div>
+{% endif %}
+
+
