Sanitation experiment content migrated from original experiment. Templates added and modified for participant sequence.

--- a/vcweb/core/templates/contact.html
+++ b/vcweb/core/templates/contact.html
@@ -9,7 +9,9 @@
         Please feel free to send us feedback, suggestions, or comments via our
         <a class='external' href='http://commons.asu.edu/contact'>contact form</a>.
         <br/><br/>
-        We also maintain an issue tracker at <a class='external' href='https://bitbucket.org/virtualcommons/vcweb/issues'>BitBucket</a>.
+        We also maintain an issue tracker at <a class='external' href='https://bitbucket.org/virtualcommons/vcweb/issues'>BitBucket</a>
+        and <a class='external' href='http://sourceforge.net/apps/trac/virtualcommons/'>SourceForge</a>
+        (one of these will eventually be retired).
 	</div>
 </div>
 {% endblock page %}
