--- a/vcweb/core/templates/participant/dashboard.html
+++ b/vcweb/core/templates/participant/dashboard.html
@@ -9,17 +9,19 @@ Virtual Commons Web Participant Dashboard
 {% endblock %}
 {% block page %}
 <div class='info infoIcon ui-corner-all'>
-    Welcome back, {{request.user.participant}}.  Experiments you're participating in are listed below.
+    Welcome back, {{request.user.participant}}. <br> Experiments you're participating in are listed below.
 </div>
 <div id='experiments'>
     {% for experiment_metadata, experiment_status_dict in experiments.items %}
-        <h3> {{ experiment_metadata.title }} </h3>
+<!--        <h3> {{ experiment_metadata.title }} </h3> --> 
         {% for experiment_status, experiments in experiment_status_dict.items %}
             {% if experiments %}
-            <h4>{{experiments.0.get_status_display}}</h4>
+            <h4>{{ experiment_metadata.title }}: {{experiments.0.get_status_display}}</h4>
             {% for experiment in experiments %}
-                <div style='padding: 10px;' class='ui-state-highlight'>
-                    <a title='This experiment is being run by {{experiment.experimenter}}' href='{{ experiment.participant_url }}'><span class='icon-left ui-icon {{experiment_status|lower}}'></span>{{ experiment.status_line }}, started {{experiment.current_round_start_time}}</a>
+                <div style='padding: 2px;' class='ui-state-highlight'>
+<!-- FIXME display correct time for end of experiment --->
+<!-- FIXME display the given name of the experiment, for example "Introduction to Global Health GH 101" --->
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a title='This experiment is being run by {{experiment.experimenter}}' href='{{ experiment.participant_url }}'><span class='icon-left ui-icon {{experiment_status|lower}}'></span><u>{{ experiment.namespace }}</u> <br> From {{experiment.current_round_start_time}} until {{experiment.current_round_start_time}}</a>
                 </div>
             {% endfor %}
             {% endif %}
