--- a/vcweb/sanitation/templates/sanitation/consent.html
+++ b/vcweb/sanitation/templates/sanitation/consent.html
@@ -8,6 +8,11 @@
 <fieldset>
     <legend>{{experiment.namespace}} participation consent form. (id: {{ experiment.pk }})</legend>
     <div class='info'>
+<p>
+Next url = {{next_url}}<br>
+</p>
+
+
 <p>Experiment runs from {{experiment.current_round_start_time}} to {}</p>
 <p>
 (General Instructions)
@@ -42,7 +47,8 @@ If you choose not to participate or to withdraw from the study at any time, ther
 This experiment is being run by {{experiment.experimenter}} who may be contacted for assistance during the experiment.
 </div>
 <p>By clicking accept you agree to the terms of participation.<br> You must be of legal voting age to participate.</p>
-    <form id="consentform" action="">
+    <form id="consentform" action="{{next_url}}">
+
 	<button type='submit'>Accept</button>
     </form>
 
