adding more fields to Activity + starting to work out relationships with ActivityAvailability.
adding a basic activity list page and adjusting the returned json data to be listed
by level, e.g., {1: [...], 2:[...], 3:[...], ...}

--- a/vcweb/lighterprints/templates/lighterprints/activity_list.html
+++ b/vcweb/lighterprints/templates/lighterprints/activity_list.html
@@ -1,1 +1,14 @@
 {% extends "base.html" %}
+
+{% block title %} Lighter Footprints {% endblock %}
+
+{% block page %}
+{% for level, activities in activity_by_level.items %}
+<h3>Level {{level}} Activities</h3>
+<ul>
+    {% for activity in activities %}
+    <li>{{ activity }}</li>
+    {% endfor %}
+</ul>
+{% endfor %}
+{% endblock page %}
