--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -44,8 +44,9 @@ FIXME: replace these links eventually.
 <div id="post">
     {% for e in experiments %}
     <div class='notice ui-corner-all'>
-        {{e.status_line}} <span style='padding: 3px;' class='ui-state-highlight'><b>{{e.participants.count}} registered participants</b></span>
+        {{e.status_line}} 
         <ul class='horizontal experiment-menu'>
+            <li><span style='padding: 3px;' class='ui-state-highlight'><b>{{e.participants.count}} registered participants</b></span></li>
             <li><a title='Monitor and control this experiment' href='{{e.monitor_url}}'><img src='{{STATIC_URL}}images/famfamfam/zoom.png' alt='General experiment monitoring interface'/> monitor</a></li>
             <li><a class='confirm-experiment-action' title='Creates a new copy of this experiment with the exact same configuration but no registered participants.' href='{{e.clone_url}}'><img src='{{STATIC_URL}}images/famfamfam/page_copy.png' alt='Clone experiment'/> clone</a></li>
             {% if e.participants.count == 0  %}
