working on ajax experiment action invocation and adding error messages if any to the json response

--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -47,14 +47,22 @@ FIXME: replace these links eventually.
         {{e.status_line}} 
         <ul class='horizontal experiment-menu'>
             <li><span style='padding: 3px;' class='ui-state-highlight'><b>{{e.participants.count}} registered participants</b></span></li>
-            <li><a title='Monitor and control this experiment' href='{{e.monitor_url}}'><img src='{{STATIC_URL}}images/famfamfam/zoom.png' alt='General experiment monitoring interface'/> monitor</a></li>
-            <li><a class='confirm-experiment-action' title='Creates a new copy of this experiment with the exact same configuration but no registered participants.' href='{{e.clone_url}}'><img src='{{STATIC_URL}}images/famfamfam/page_copy.png' alt='Clone experiment'/> clone</a></li>
+            <li><a title='Monitor and control this experiment' 
+                href='{{e.monitor_url}}'>
+                <img src='{{STATIC_URL}}images/famfamfam/zoom.png' alt='General experiment monitoring interface'/> monitor</a></li>
+            <li>
+            <a class='confirm-experiment-action' title='Creates a new copy of this experiment with the exact same configuration but no registered participants.'
+                href='{{e.clone_url}}'><img src='{{STATIC_URL}}images/famfamfam/page_copy.png' alt='Clone experiment'/> clone</a></li>
             {% if e.participants.count == 0  %}
+            {% comment %}
             <li>
             <a title='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'><img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants by email</a>
             </li>
+            {% endcomment %}
             <li>
-            <a title='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.' href='{{e.controller_url}}/register-simple'><img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register example participants</a>
+            <a title='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.' 
+                href='{{e.controller_url}}/register-simple'>
+                <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants</a>
             </li>
             {% else %}
             <li><a title='clear all participants' href='{{e.controller_url}}/clear-participants' class='confirm-experiment-action'><img src='{{STATIC_URL}}images/famfamfam/group_delete.png' alt=''/> clear all participants</a></li>
@@ -63,7 +71,7 @@ FIXME: replace these links eventually.
             <li><a title='stop this experiment' href='{{e.stop_url}}' class='confirm-experiment-action'><img src='{{STATIC_URL}}images/famfamfam/stop.png' alt=''/> stop</a></li>
             {% else %}
             <li>
-            <a title='Configure this experiment (currently implemented for sanitation game)' href='{{e.configure_url}}'><img src='{{STATIC_URL}}images/famfamfam/wrench.png' alt='configure' /> configure</a>
+            <a title='Configure this experiment (sanitation)' href='{{e.configure_url}}'><img src='{{STATIC_URL}}images/famfamfam/wrench.png' alt='configure' /> configure</a>
             </li>
             {% endif %}
         </ul>
