--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -33,13 +33,12 @@ Forestry Experiment Round {{ experiment.current_round.round_number }}
 {% block page %}
 <h3>Waiting for the next round to start</h3>
 <p>
-Please wait, {{participant_experiment_relationship.participant}}. The facilitator will start the next round when every participant is ready.
-
+Please wait, the facilitator will start the next round when every participant is ready.
+</p>
 <div class='info infoIcon'>
-    You are <span style='padding: 3px;' class='ui-state-highlight'>Participant #{{participant_group_relationship.participant_number}} ({{participant_experiment_relationship.sequential_participant_identifier}})</span> in 
+    You are <span style='padding: 3px;' class='ui-state-highlight'>Participant #{{participant_group_relationship.participant_number}} ({{participant_experiment_relationship.pk}}, {{participant_experiment_relationship.sequential_participant_identifier}})</span> in 
     <span style='padding: 3px;' class='ui-state-highlight'>{{participant_group_relationship.group}}</span>
 </div>
-</p>
 <div class='ui-state-highlight ui-corner-all'>
     <small><span class='float-left vcweb-ui-icon ui-icon ui-icon-circle-arrow-w'></span><a href='participate'>return to participation page</a></small>
 </div>
