adding delay to harvest decision submission, minor improvements to logging in preparation for pretest tomorrow

--- a/vcweb/core/templates/base-vcweb-form.html
+++ b/vcweb/core/templates/base-vcweb-form.html
@@ -6,7 +6,7 @@
 {% endblock head %}
 
 {% block page %}
-<form id='vcweb-form' action='.' method='post'>
+<form id='vcweb-form' action='' method='post'>
 {% csrf_token %}
 {% block form %}
 
