minor ui changes, increasing setTimeout in submit, still has some issues w/ validation

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -104,7 +104,7 @@
 {% endblock %}
 {% block page %}
 {{block.super}}
-<h3>{{experiment.status_line}}</h3>
+<h3>{{experiment}}</h3>
 <span>You are logged in as {{request.user.experimenter}}.</span>
 <hr/>
 <div id='experimenter-sidebar'>
