--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -49,8 +49,8 @@
             s.send(createSubmitEvent(harvestDecisionValue));
             setTimeout(function() {
                 $('#forestry-form').submit();
-                }, 300);
-            return true;
+                }, 800);
+            return false;
         });
     });
 </script>
