--- a/vcweb/core/templates/includes/participant.events.html
+++ b/vcweb/core/templates/includes/participant.events.html
@@ -13,7 +13,8 @@ function createMessageEvent(payload, event_type) {
       "message_type": event_type,
 {% if participant_group_relationship %}
       "participant_group_relationship_id": {{participant_group_relationship.pk}},
-{% else %}
+{% endif %}
+{% if participant_experiment_relationship %}
       "participant_experiment_relationship_id": {{participant_experiment_relationship.pk}},
 {% endif %}
       "message": payload
