adding simple mobile view proof of concept

--- a/vcweb/core/templates/mobile/base.html
+++ b/vcweb/core/templates/mobile/base.html
@@ -3,7 +3,7 @@
     <head>
         {% block head %}
         <title>{% block title %}Virtual Commons Web Environment{% endblock %}</title>
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b.1/jquery.mobile-1.0b.1.min.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.css" />
         <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js'></script>
         <script type="text/javascript" src="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.js"></script>
         <link href="{{STATIC_URL}}css/mobile.css" rel="stylesheet" type="text/css" media="screen" />
